# dependabot-uv-test

./: LICENSE  README.md  pyproject.toml  requirements.txt
.depbot/: pyproject.toml
.github/: dependabot.yml
.github/dependabot/: py.yml
.github/scripts/: dependabot_create_prs.sh  patch_pyproject.py
.github/workflows/: dependabot.yml  export_requirements.yml  update_lockfiles.yml  update_uvlock.yml
scripts/: custom_build_hook.py
