[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.20",
]

[project]
name = "hw"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
version = "0.0.0"
dependencies = [
    "pydantic>=2.6,<3",
    "typing-extensions>=4",
]

[dependency-groups]
dev = [
    "tomli-w==1.2.0",
]
